--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Content/Site.css
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Content/Site.css
@@ -35,15 +35,24 @@ h2 {
 }
 
 .jumbotron{
-    margin-top:50px;
+    margin-top:80px;
+    background-image:url("/Content/Images/background.jpg");
+    height:400px;
    
+   
+ 
   
 }	
 
 .jumbotron h1{
     font-family: 'Roboto', 'Helvetica Nueue', sans-serif;
     font-weight:300;
-    font-size:26px;
+    font-size:36px;
+  
+    font-weight:500;
+    color:white;
+    margin-top:80px;
+
 }
 
 
