--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Participant/CriteriaDetials.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Participant/CriteriaDetials.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Riipen_SSD.ViewModels.ParticipantViewModels.CriteriaDetailVM>
 
 @{
-    ViewBag.Title = "CriteriaDetials";
+    ViewBag.Title = "CriteriaDetails";
 }
 <link href="~/Styles/ParticipantDetailsResponsive.css" rel="stylesheet" />
 <div class="header">
