--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Participant/TeamScores.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Participant/TeamScores.cshtml
@@ -40,7 +40,7 @@
             {
                 <tr>
                     <td>
-                        @Html.ActionLink(item.CriteriaName, "CriteriaDetials", new { teamID = ViewBag.TeamID, contestID = ViewBag.ContestID, criteriaID = item.CriteriaID })
+                        @Html.ActionLink(item.CriteriaName, "CriteriaDetails", new { teamID = ViewBag.TeamID, contestID = ViewBag.ContestID, criteriaID = item.CriteriaID })
                     </td>
 
                     <td>
