--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/team.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/team.cshtml
@@ -27,9 +27,7 @@
     </div>
 </div>
 
-<div class="alert alert-danger hidden validateScoreInput">
-    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-    Please give all criterion a score before you save or submit.
+<div class="validateScoreInput">
 </div>
 
 <div class="judge-participant-wrapper">
