--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Account/Login.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Account/Login.cshtml
@@ -11,6 +11,7 @@
 
 
         <div class="alert alert-danger">
+            <i class="fa fa-times"></i>
             <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
              @ViewBag.errorMessage 
         </div>
