--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/team.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/team.cshtml
@@ -9,6 +9,7 @@
 @section scripts{
     <script src="~/JavaScript/Judge_Team_form.js"></script>
     <script src="~/JavaScript/Judge-Participant.js"></script>
+    <script src="https://use.fonticons.com/75294f30.js"></script>
 }
 
 
@@ -28,6 +29,7 @@
 </div>
 
 <div class="alert alert-danger hidden validateScoreInput">
+    <i class="fa fa-times"></i>
     <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
     Please give all criterion a score before you save or submit.
 </div>
