--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/CreateContest.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/CreateContest.cshtml
@@ -40,7 +40,7 @@
         </div>
         <div class="date">
             <label for="date">Date</label>
-            <input type="date" class="form-control"name="Date" id="date" />
+            <input type="text" class="form-control"name="Date" id="date" />
         </div>
         <div class="location">
             <label for="location">Location</label>
