--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Content/Site.css
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Content/Site.css
@@ -36,7 +36,7 @@ h2 {
 
 .jumbotron{
     margin-top:80px;
-    background-image:url("/Content/Images/background.jpg");
+    background-image:url("/Images/background.jpg");
     height:400px;
    
    
