Finished the new IE supported date picker

--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/CreateContest.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/CreateContest.cshtml
@@ -5,6 +5,8 @@
 
 @section scripts{
     <script src="~/JavaScript/Create_Edit_forms.js"></script>
+<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <style>
         #excelPreview {
             display: none;
@@ -40,7 +42,7 @@
         </div>
         <div class="date">
             <label for="date">Date</label>
-            <input type="text" class="form-control"name="Date" id="date" />
+            <input type="text" class="form-control"name="Date" id="datepicker" />
         </div>
         <div class="location">
             <label for="location">Location</label>
