Add more presentable display names of viewmodels.

--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/Index.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@*@model IEnumerable<Riipen_SSD.AdminViewModels.IndexContestVM>*@
-@model PagedList.IPagedList<Riipen_SSD.AdminViewModels.IndexContestVM>
+﻿@model PagedList.IPagedList<Riipen_SSD.AdminViewModels.IndexContestVM>
 @using PagedList.Mvc;
 <link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
