--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Participant/TeamScores.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Participant/TeamScores.cshtml
@@ -1,25 +1,45 @@
 ﻿@model Riipen_SSD.ViewModels.ParticipantViewModels.TeamCriteriaVMList
+<link href="~/Styles/Judge_Participant.css" rel="stylesheet" />
 
 @{
     ViewBag.Title = "TeamScores";
 }
 
+
+@section scripts{
+    <script src="~/JavaScript/Judge_Team_form.js"></script>
+    <script src="~/JavaScript/Judge-Participant.js"></script>
+}
 <link href="~/Styles/ParticipantTeamResponsive.css" rel="stylesheet" />
 
-<div class="header">
-    @if (ViewBag.TeamName != null) {
+    <div class="header header-in-judge-team-score">
+        <div class="participant-team-score">
+            @if (ViewBag.TeamName != null)
+            {
+                <p>Team: &nbsp;&nbsp;<span class="ex-small-title"> @ViewBag.TeamName</span></p>
+            }
 
-        <p>Team: @ViewBag.TeamName</p>
-    }
+            @if (ViewBag.ContestName != null)
+            {
+                <p>Contest:&nbsp;&nbsp; <span class="ex-small-title">@ViewBag.ContestName</span></p>
+            }
 
-    @if (ViewBag.ContestName != null)
-    {
+            @if (ViewBag.TotalScore != null)
+            { 
+                
+                <p>Total score:&nbsp;&nbsp; <span class="ex-small-title">@ViewBag.TotalScore</span><span>/7</span></p>
+            }
+            else
+            {
+                <p>Total score:&nbsp;&nbsp; <span class="ex-small-title">N/A</span></p>
+            }
+        </div>
+    </div>
 
-        <p>Contest: @ViewBag.ContestName</p>
-    }
-</div>
 
-<div>
+
+
+<div class="judge-participant-wrapper">
     <table>
         <thead>
             <tr>
@@ -49,10 +69,10 @@
                     <td>
                         @if (item.Score == null)
                         {
-                            <span>Not available</span>
+                            <span>N/A</span>
                         }
                         else
-                        { @item.Score
+                        { @item.Score<span>/7</span>
 
                         }
 
